@@ -20,7 +20,7 @@
 * repair HypergeometricU11
 * recreate function logGamma with fixed all errors
 * Associated Legendre functions Plm, Qlm for real l and m (not only for integers l,m)
-* update gsl to the newest version
+* update gsl to the newest version (https://github.com/ampl/gsl, https://customwingsl2015.codeplex.com, http://stackoverflow.com/questions/13277856/how-to-build-gsl-with-msvc2010, http://173.254.28.24/~brgladma//oldsite/computing/gnu_scientific_library.php, https://azylstra.net/blog/post/building-gsl-on-windows)
 * make it possible to create distrubution like normal from array of elemenets and from mean stdev and make functions from elemenets like CDF(elements,x)
 * Matrix division
 * rest of special functions
